--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
   --team-backgroud: #f4f4fd;
   --footer-text: #e7e9fc;
   --border-color: #8e8f99;
-  /* #8e8f99; #434455; #2e2f42; #4d5ae5; #ffffff; #F4F4FD, #404BBF, #F4F4FD, #E7E9FC  */
+  --customers-icon-color: #afb1b8;
+  /* #AFB1B8, #8e8f99; #434455; #2e2f42; #4d5ae5; #ffffff; #F4F4FD, #404BBF, #F4F4FD, #E7E9FC  */
 }
 
 /* ----------------body---------------- */
@@ -43,9 +44,6 @@ img {
   /* outline: 1px solid red; */
 }
 
-:focus {
-  outline: none;
-}
 /* ----------------header----------------*/
 
 .header {
@@ -357,6 +355,10 @@ img {
   justify-content: center;
 }
 
+.team-icon {
+  fill: var(--team-backgroud);
+}
+
 .team-link:focus,
 .team-link:hover {
   background-color: var(--hover-focus);
@@ -382,6 +384,16 @@ img {
   border-radius: 4px;
 }
 
+.list-item:focus,
+.list-item:hover {
+  border-color: var(--hover-focus);
+}
+
+.list-item:focus .customers-icon .list-item:hover .customers-icon {
+  border-color: var(--hover-focus);
+  fill: var(--hover-focus);
+}
+
 .customers-link {
   width: 100%;
   height: 100%;
@@ -390,8 +402,8 @@ img {
   justify-content: center;
 }
 
-.customers-icon:focus {
-  fill: red;
+.customers-icon {
+  fill: var(--customers-icon-color);
 }
 
 /* -----------------footer---------------- */
