--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
   --footer-text: #e7e9fc;
   --border-color: #8e8f99;
   --customers-icon-color: #afb1b8;
-  /* #AFB1B8, #8e8f99; #434455; #2e2f42; #4d5ae5; #ffffff; #F4F4FD, #404BBF, #F4F4FD, #E7E9FC  */
+  --soc-links-color: rgba(255, 255, 255, 0.1);
+  --soc-links-hover: #31d0aa;
+  /* #31D0AA ,rgba(255, 255, 255, 0.1) ,#AFB1B8, #8e8f99; #434455; #2e2f42; #4d5ae5; #ffffff; #F4F4FD, #404BBF, #F4F4FD, #E7E9FC  */
 }
 
 /* ----------------body---------------- */
@@ -151,7 +153,7 @@ img {
     url(../images/main-page/fero-bg-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: 1440px;
 }
 .hero-title {
   font-size: 56px;
@@ -180,7 +182,6 @@ img {
   margin: 0 auto;
   padding: 16px 32px;
   background: #4d5ae5;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
 }
@@ -189,6 +190,7 @@ img {
 .hero-button:hover {
   background-color: var(--hover-focus);
   outline: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* ----------------our skills---------------- */
@@ -389,7 +391,8 @@ img {
   border-color: var(--hover-focus);
 }
 
-.list-item:focus .customers-icon .list-item:hover .customers-icon {
+.list-item:focus .customers-icon,
+.list-item:hover .customers-icon {
   border-color: var(--hover-focus);
   fill: var(--hover-focus);
 }
@@ -445,6 +448,50 @@ img {
   width: 264px;
 }
 
+.footer-wrap {
+  display: flex;
+  gap: 120px;
+}
+
+.soc-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--hero-title-color);
+
+  margin-bottom: 16px;
+}
+
+.soc-list {
+  display: flex;
+  gap: 16px;
+}
+
+.soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--soc-links-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.soc-icon {
+  fill: var(--team-backgroud);
+}
+
+.soc-link:focus,
+.soc-link:hover {
+  background-color: var(--soc-links-hover);
+}
+
 /* -----------------portfolio page----------------- */
 
 .portfolio {
@@ -459,6 +506,13 @@ img {
   justify-content: center;
   gap: 24px;
 }
+
+.portfolio-item:focus,
+.portfolio-item:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .portfolio-btn {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -479,6 +533,8 @@ img {
   color: var(--hero-title-color);
   background-color: var(--hover-focus);
   border-color: var(--hover-focus);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
@@ -487,7 +543,10 @@ img {
   gap: 48px 24px;
 }
 
-.portfolio-li {
+.portfolio-li:focus,
+.portfolio-li:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-wrap {
