--- a/css/styles.css
+++ b/css/styles.css
@@ -379,30 +379,29 @@ img {
 }
 
 .list-item {
-  width: 168px;
-  height: 88px;
-  display: block;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
+
 }
 
-.list-item:focus,
-.list-item:hover {
+.customers-link:focus,
+.customers-link:hover {
   border-color: var(--hover-focus);
 }
 
-.list-item:focus .customers-icon,
-.list-item:hover .customers-icon {
+.customers-link:focus .customers-icon,
+.customers-link:hover .customers-icon {
   border-color: var(--hover-focus);
   fill: var(--hover-focus);
 }
 
 .customers-link {
-  width: 100%;
-  height: 100%;
+  width: 168px;
+  height: 88px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
 }
 
 .customers-icon {
