--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,10 @@ img {
     url(../images/main-page/fero-bg-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1440px;
+  background-size: cover;
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-title {
   font-size: 56px;
@@ -213,25 +216,16 @@ img {
   margin: -1px;
 }
 
-.skills-icons {
-  margin-bottom: 8px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.skills-icon-li {
-  width: 264px;
-  height: 112px;
-  background-color: var(--team-backgroud);
-  border-radius: 4px;
-}
-
 .icon-li {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 112px;
+  background-color: var(--team-backgroud);
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .skills-title {
@@ -368,18 +362,28 @@ img {
 
 /* --------------customers-------------- */
 
+.customers-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1, 11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
 .customers {
-  padding-top: 242px;
+  padding-top: 130px;
   padding-bottom: 120px;
 }
 
 .customers-list {
   display: flex;
-  justify-content: space-between;
+  gap: 24px;
 }
 
 .list-item {
-
+  width: calc((100% - 120px) / 6);
 }
 
 .customers-link:focus,
@@ -394,7 +398,6 @@ img {
 }
 
 .customers-link {
-  width: 168px;
   height: 88px;
   display: flex;
   align-items: center;
@@ -447,9 +450,12 @@ img {
   width: 264px;
 }
 
+.footer-logo-wrap {
+  margin-right: 120px;
+}
+
 .footer-wrap {
   display: flex;
-  gap: 120px;
 }
 
 .soc-title {
@@ -542,8 +548,8 @@ img {
   gap: 48px 24px;
 }
 
-.portfolio-li:focus,
-.portfolio-li:hover {
+.portfolio-link:focus,
+.portfolio-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -556,6 +562,7 @@ img {
 
 .portfolio-link {
   text-decoration: none;
+  display: block;
 }
 .portfolio-title {
   font-weight: 500;
